--- a/assets/style.css
+++ b/assets/style.css
@@ -241,14 +241,20 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
+
+.contact {
+	width: 100%;
+	font-size: 2.4em;
+}
 .localisation-container{
 	color: white;
 	background: linear-gradient(70deg, #081a1d,#0e3038);
 }
 .localisation{
 	display: flex;
+	flex-wrap: wrap;
 	/* margin: 20px; */
-	flex-direction: column;
+	/* flex-direction: column; */
 	padding: 20px 0px 0px 0px;
 	width: 100%;
 	
@@ -265,6 +271,12 @@ input[type="submit"] {
 .localisation  h3 {
 	margin-bottom: 20px;
 
+}
+ .portrait {
+	width: 150px;
+	height: 150px;
+	margin-bottom: 10px;
+	margin-right: 20px;
 }
 
 
